--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
 	}
 
 	background-color: var(--bg-hero-footer);
-	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img-hero-mob.jpg);
+	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Img-hero-mob.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	max-width: 1600px;
