--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,14 +9,14 @@
 	}
 
 	background-color: var(--bg-hero-footer);
-	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Img-hero-mob.jpg);
+	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img-hero-mob.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	max-width: 1600px;
 	margin: 0 auto;
 	@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
 		background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4) 40%, rgba(47, 48, 58, 0.4)),
-			url(/images/Img-hero-mob-2x.jpg);
+			url(../images/Img-hero-mob-2x.jpg);
 	}
 	@media screen and (min-width: 768px) {
 		background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4) 40%, rgba(47, 48, 58, 0.4)),
